Add Jekyll Chirpy blog infrastructure
Set up GitHub Pages blog with Jekyll Chirpy theme (chirpy-starter method):
- Gemfile with jekyll-theme-chirpy ~> 7.4 and html-proofer
- Full _config.yml with SEO, syntax highlighting, archives
- GitHub Actions CI/CD pipeline (build, validate, deploy)
- Navigation tabs (about, archives, categories, tags)
- First blog post: Taking Out the Trash: Reining in AI Slop
- Data files for contact links and share buttons
- Last-modified plugin for git-based post dates
- CSS override hook and favicon directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
+# Jekyll build output
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+
+# Ruby
+vendor/
+
+# Bundler
+.bundle/
+
+# Node (if any frontend tooling added later)
+node_modules/
+
+# Project temp files
 temp/
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
